--- a/client/templates/application/request.html
+++ b/client/templates/application/request.html
@@ -12,8 +12,10 @@
 					<input type="radio" name="request_type" id="rd_mlst" value="milestone"> Milestone Linked Fund Transfer <br>
 				</div>
 				<div class="request_detail">
-					<span>Amount:</span><br>
-					<input type="number" name="transfer_amount" id="transfer_amount" placeholder="Enter Amount Upto XXX"><br>
+					<span>Receiver Address:</span><br>
+					<input type="text" name="receiver_account" id="receiver_account" placeholder="0x02709c3a27c15193a439d0d54389711aba438f2b" size="42"><br>
+					<span>Amount (Ether):</span><br>
+					<input type="number" step=any name="transfer_amount" id="transfer_amount" placeholder="Enter Amount Upto XXX"><br>
 					<div class="milestone hide">
 						<span>Target:</span><br>
 						<input type="text" name="mlst_target" id="mlst_target" placeholder="Milestone Target">
